Fixed chrome overflow.

--- a/public/LESS_FILES/overrides.less
+++ b/public/LESS_FILES/overrides.less
@@ -49,6 +49,7 @@
 
 #header {
     padding: 0;
+   -webkit-transform: translateZ(0); 
 
     & > div {
         display: block;
